# EmbeddedFromScratch

./: .gitignore  CMakeLists.txt  README.md
config/CMake/: Toolchain.cmake
config/CMake/STM32F429/: Toolchain.cmake
config/HAL/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
config/LinkerScript/STM32F429/: STM32F429.ld
config/Scripts/: Build.bat  Build.sh  Flash.bat  Flash.sh
hal/: CMakeLists.txt
hal/include/: stm32f4xx.h
modules/hal/: CMakeLists.txt
modules/hal/STM32F429/: CMakeLists.txt
src/core/: CMakeLists.txt  main.c  main.cpp  stm32f4xx_it.c
